--- a/src/saxsfittool/resource/saxsfittool.ui
+++ b/src/saxsfittool/resource/saxsfittool.ui
@@ -138,7 +138,11 @@ zoom</string>
          <item>
           <layout class="QGridLayout" name="gridLayout_2">
            <item row="0" column="1">
-            <widget class="QComboBox" name="comboBox"/>
+            <widget class="QComboBox" name="fitFunctionComboBox">
+             <property name="sizeAdjustPolicy">
+              <enum>QComboBox::AdjustToContents</enum>
+             </property>
+            </widget>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_4">
@@ -148,7 +152,7 @@ zoom</string>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QPushButton" name="ExecutePushButton">
+            <widget class="QPushButton" name="executePushButton">
              <property name="text">
               <string>Execute</string>
              </property>
@@ -207,8 +211,14 @@ zoom</string>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="rootIsDecorated">
+                <bool>false</bool>
+               </property>
                <property name="uniformRowHeights">
                 <bool>true</bool>
+               </property>
+               <property name="itemsExpandable">
+                <bool>false</bool>
                </property>
               </widget>
              </item>
