--- a/src/saxsfittool/resource/saxsfittool.ui
+++ b/src/saxsfittool/resource/saxsfittool.ui
@@ -163,7 +163,7 @@ zoom</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="0" colspan="2">
+           <item row="5" column="0" colspan="2">
             <layout class="QHBoxLayout" name="horizontalLayout_2">
              <item>
               <widget class="QPushButton" name="executePushButton">
@@ -214,6 +214,16 @@ zoom</string>
            </item>
            <item row="3" column="1">
             <widget class="QComboBox" name="lossFunctionComboBox"/>
+           </item>
+           <item row="4" column="0" colspan="2">
+            <widget class="QCheckBox" name="weightingCheckBox">
+             <property name="text">
+              <string>Use y error bars for weights</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -333,6 +343,16 @@ zoom</string>
         <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
           <layout class="QVBoxLayout" name="reprFigureLayout"/>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_3">
+        <attribute name="title">
+         <string>Parameter correlation</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_7">
+         <item>
+          <widget class="QTableView" name="correlationTableView"/>
          </item>
         </layout>
        </widget>
