--- a/src/saxsfittool/resource/saxsfittool.ui
+++ b/src/saxsfittool/resource/saxsfittool.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>756</width>
-    <height>728</height>
+    <width>773</width>
+    <height>810</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -132,6 +132,43 @@
              <property name="text">
               <string>Set from
 zoom</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="groupBox">
+          <property name="title">
+           <string>File</string>
+          </property>
+          <layout class="QFormLayout" name="formLayout">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>Path:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>File name:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLabel" name="pathLabel">
+             <property name="text">
+              <string>&lt;no file has been loaded yet&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLabel" name="filenameLabel">
+             <property name="text">
+              <string>&lt;no file has been loaded yet&gt;</string>
              </property>
             </widget>
            </item>
@@ -304,11 +341,25 @@ zoom</string>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="exportResultsPushButton">
-          <property name="text">
-           <string>Export parameters and results...</string>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="topMargin">
+           <number>0</number>
           </property>
-         </widget>
+          <item>
+           <widget class="QPushButton" name="exportResultsPushButton">
+            <property name="text">
+             <string>Export parameters and results...</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="loadParametersPushButton">
+            <property name="text">
+             <string>Load parameters...</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
